--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "PORT=8080 DISABLE_ESLINT_PLUGIN=true WATCHPACK_POLLING=true react-scripts start",
+    "start": "set PORT=8080 && react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
